--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 .DS_Store
 tests/
+.secrets/*
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
